<resources>
    <string name="app_name">DSM - G4</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="boton_inicio">Iniciar Sesión</string>
    <string name="seleccionar">Ingrese sus datos para iniciar sesión</string>
    <string name="titulo">Bienvenido a la App Llaqta</string>
    <string name="correo_tit">Correo</string>
    <string name="correo">christiancomena01@hotmail.com</string>
    <string name="contraseña_tit">Contraseña</string>
    <string name="contraseña">********</string>
    <string name="ofertas">Ofertas</string>
    <string name="casita">Inicio</string>
    <string name="categories">Categorías</string>
    <string name="compra">Mis Pedidos</string>
    <string name="favorites">Favoritos</string>
    <string name="cuenta">Mi cuenta</string>
    <string name="recomendados">Productos Recomendados</string>
    <string name="productores">Productores</string>
    <string-array name="Departamento">
        <item>Amazonas</item>
        <item>Ancash</item>
        <item>Apurímac</item>
        <item>Arequipa</item>
        <item>Ayacucho</item>
        <item>Cajamarca</item>
        <item>Cusco</item>
        <item>Huancavelica</item>
        <item>Huánuco</item>
        <item>Ica</item>
        <item>Junín</item>
        <item>La Libertad</item>
        <item>Lambayeque</item>
        <item>Lima</item>
        <item>Loreto</item>
        <item>Madre de Dios</item>
        <item>Moquegua</item>
        <item>Pasco</item>
        <item>Piura</item>
        <item>Puno</item>
        <item>San Martín</item>
        <item>Tacna</item>
        <item>Tumbes</item>
        <item>Ucayali</item>
    </string-array>

    <string-array name="Provincia">
        <item>Opción 1</item>
        <item>Opción 2</item>
        <item>Opción 3</item>
    </string-array>
    <string-array name="Distrito">
        <item>Opción 1</item>
        <item>Opción 2</item>
        <item>Opción 3</item>
    </string-array>
    <string-array name="Cuotas">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>